Resolved inspection warnings and errors
- Updated codebase to use new language features like records and enhanced switch expressions
- Removed unused classes InjectionUtil, WorldSeedHolder, MixinDimensionGeneratorSettings, ClientFireType
- Removed commented out code
- Removed unused imports
- Removed unnecessary inspection suppression's